--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,6 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/css/material.min.css"/>
 
         <!-- hifive -->
-        <link rel="stylesheet" type="text/css" href="lib/h5-1.1.14.css" />
         <link href="//code.htmlhifive.com/h5.css" rel="stylesheet">
 
         <link rel="stylesheet" type="text/css" href="css/index.css" />
@@ -103,14 +102,15 @@ app.initialize();
             <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
             <![endif]-->
             <!--[if gte IE 9]><!-->
-                <script type="text/javascript" src="lib/jquery-2.1.3.min.js"></script>
+                <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
                 <!--<![endif]-->
                 <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.11.0/jquery-ui.min.js"></script>
 
                 <!-- Latest compiled and minified JavaScript -->
                 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-                <script type="text/javascript" src="js/ripples.min.js"></script>
-                <script type="text/javascript" src="js/material.min.js"></script>
+                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/js/ripples.min.js"></script>
+        
+                <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.2.2/js/material.min.js"></script>
 
                 <!-- hifive -->
                 <script src="//code.htmlhifive.com/ejs-h5mod.js"></script>
